# ngspice

./: %bsim6.el  .clang-format  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  ANALYSES  AUTHORS  BUGS  COPYING  ChangeLog  DEVICES  Dockerfile  FAQ  INSTALL  INTERNALS  Install-Ubuntu.txt  Makefile.am  NEWS  NOTES  README  README.SEEgenerator  README.Tcl  README.XSPICE  README.adms  README.adms-new  README.cpl-gc  README.degmon  README.gc-local  README.loop  README.optran  README.reset  README.sc21  README.scope-inpcom-16  README.shared-xspice  README.simd  README.startup  README.tcl  README.utf8  README.vdmos  (+116 more)
doc/: .cvsignore  ChangeLog  Makefile.am  ngspice.texi  texinfo.tex  version.texi
man/man1/: Makefile.am  cmpp.1  ngmakeidx.1  ngmultidec.1  ngnutmeg.1  ngproc2mod.1  ngsconvert.1  ngspice.1  nutmeg.1  sconvert.1  spice.1
src/: .cvsignore  ChangeLog  Makefile.am  ciderconvert.c  ciderinit  ciderplot.py  conf.c  conf.h  controls.tcl  devaxis  devload  engUnits.tcl  gnuplot.tcl  help.c  hist_info.c  hist_info.h  libtool_wrapper_for_cuda.tcl  main.c  makeidx.c  measure.tcl  measure_spice.pl  multidec.c  nghelp.c  ngicon.rc  ngmultidec.c  ngnutmeg.c  ngproc2mod.c  ngsconvert.c  ngspice.c  ngspice.idx  ngspice.txt  nodeDialog.tcl  nutmeg.c  pkgIndex.tcl.in  proc2mod.c  readline.tcl  sconvert.c  setplot  sharedspice.c  spectrum  (+16 more)
src/analysis/: ChangeLog  Makefile.am  acan.c  cktaccpt.c  cktacdum.c  cktask.c  cktaskaq.c  cktasknq.c  cktbindn.c  cktbkdum.c  cktclrbk.c  cktcrte.c  cktdest.c  cktdisto.c  cktdump.c  cktfbran.c  cktfdev.c  cktfnda.c  cktfndm.c  cktfnode.c  cktgrnd.c  ckti2nod.c  cktic.c  cktinit.c  cktload.c  cktmapn.c  cktmask.c  cktmkcur.c  cktmpar.c  cktnames.c  cktneweq.c  cktnewn.c  cktnodn.c  cktnoise.c  cktntask.c  cktnum2n.c  cktop.c  cktparam.c  cktpartn.c  cktpmnam.c  (+34 more)
src/ciderlib/: Makefile.am  notes
src/circuit/: ChangeLog  Makefile.am  ifeval.c  ifnewuid.c  inp.h  inp2b.c  inp2c.c  inp2d.c  inp2dot.c  inp2e.c  inp2f.c  inp2g.c  inp2h.c  inp2i.c  inp2j.c  inp2k.c  inp2l.c  inp2m.c  inp2o.c  inp2q.c  inp2r.c  inp2s.c  inp2t.c  inp2u.c  inp2v.c  inp2w.c  inp2z.c  inpaname.c  inpapnam.c  inpcfix.c  inpdomod.c  inpdoopt.c  inpdpar.c  inperrc.c  inperror.c  inpeval.c  inpfindl.c  inpgmod.c  inpgstr.c  inpgtitl.c  (+15 more)
src/frontend/: ChangeLog  Makefile.am  README  agraf.c  agraf.h  arg.c  arg.h  aspice.c  aspice.h  breakp.c  breakp.h  breakp2.c  breakp2.h  circuits.c  circuits.h  clip.h  com_ahelp.c  com_ahelp.h  com_alias.c  com_alias.h  com_asciiplot.c  com_asciiplot.h  com_cdump.c  com_cdump.h  com_chdir.c  com_chdir.h  com_commands.h  com_compose.c  com_compose.h  com_display.c  com_display.h  com_dl.c  com_dl.h  com_dump.c  com_dump.h  com_echo.c  com_echo.h  com_fft.c  com_fft.h  com_fileio.c  (+187 more)
src/hlp/: help.c  readhelp.c  x11disp.c
src/include/: 1-f-code.h  ChangeLog  Makefile.am  acdefs.h  arch.h  bdrydefs.h  bool.h  carddefs.h  ciderinp.h  cidersupt.h  cktdefs.h  cluster.h  cm.h  cmconstants.h  cmproto.h  cmtypes.h  compatmode.h  complex.h  const.h  contdefs.h  cpdefs.h  cpextern.h  cpstd.h  defines.h  devdefs.h  dgen.h  distodef.h  dllitf.h  dopdefs.h  dstring.h  dvec.h  elctdefs.h  enh.h  evt.h  evtproto.h  evtudn.h  fftext.h  ftecmath.h  fteconst.h  ftedata.h  (+78 more)
src/maths/: Makefile.am
src/misc/: ChangeLog  Makefile.am  alloc.c  alloc.h  dstring.c  dup2.c  dup2.h  engnotation.c  getopt_bsd.h  getopt_long_bsd.c  hash.c  ivars.c  ivars.h  misc_time.c  misc_time.h  missing_math.c  missing_math.h  mktemp.c  mktemp.h  printnum.c  printnum.h  string.c  string.h  stringutil.h  terminal.c  terminal.h  tilde.c  tilde.h  util.c  util.h  win_time.c  wlist.c
src/osdi/: Makefile.am  exported.txt  osdi.h  osdi_defer.c  osdiacld.c  osdicallbacks.c  osdidefs.h  osdiext.h  osdiinit.c  osdiload.c  osdinoise.c  osdiparam.c  osdipzld.c  osdiregistry.c  osdisetup.c  osditrunc.c
src/parser/: ChangeLog  Makefile.am  alias.c  alias.h  backq.h  complete.c  cshpar.c  front.c  front.h  glob.c  history.c  history.h  input.c  input.h  lexical.c  modify.c  modify.h  numparse.c  numparse.h  output.c  output.h  std.c  unixcom.c  var2.c  var2.h  variable.c  variable.h  wlist.c  wlist.h
src/spicelib/: .cvsignore  ChangeLog  Makefile.am
src/tcl/: ChangeLog  README  example.cir  plot.tcl  vector_test.tcl
src/unsupported/: Makefile.am  cktsenac.c  cktsenup.c  cktsncom.c  cktsndct.c  cktsnld.c  cktsnprt.c  cktsnset.c  readme  sen2dest.c  sen2setp.c  snaskq.c  snstart.c  spiced.c
src/xspice/: .gitignore  Makefile.am  README  xspice.c
tests/: .gitignore  ChangeLog  Makefile.am  README  check.sh  config.sh  diffpair.out  diffpair.sh  fourbitadder.out  fourbitadder.sh  maketest.sh  resistor.cir  resistor.out  resistor.sh  respart.out  respart.sh
tests/TransImpedanceAmp/: Makefile.am  README  output.net
tests/bsim1/: test.cir  test.out
tests/bsim2/: Makefile.am  test.cir  test.out
tests/bsim3/: Makefile.am
tests/bsim3soi/: Makefile.am  inv_dc.cir  inv_dc.out  inv_tr.cir  inv_tr.out  nmos4p0.mod  nmos4p1.mod  nmos4p3.mod  pmos4p0.mod  pmos4p1.mod  pmos4p3.mod  ring51_40.cir  ring51_41.cir  ring51_41.out  test1.cir  test1.out  test2.cir  test2.out  test3.cir  test3.out  test4.cir  test4.out  test5.cir  test5.out  test6.cir  test6.out  test7.cir  test7.out  test8.cir  test8.out
tests/bsim3soidd/: Makefile.am  RampVg2.cir  RampVg2.out  inv2.cir  inv2.out  lib.h  nmosdd.mod  pmosdd.mod  ring51.cir  t3.cir  t3.out  t4.cir  t4.out  t5.cir  t5.out
tests/bsim3soifd/: Makefile.am  RampVg2.cir  RampVg2.out  inv2.cir  inv2.out  nmosfd.mod  pmosfd.mod  ring51.cir  t3.cir  t3.out  t4.cir  t4.out  t5.cir  t5.out
tests/hicum2/: FG.cir  (+3 more)
xgraph/: .cvsignore  INSTALL  Makefile.am  Makefile.in  README  README.ANNOUNCE  README.GENERAL  README.HARDCOPY  README.INSTALL  README.NEWFEATURES  aclocal.m4  alloc.c  autoconf.h.in  configure  configure.in  copyright.h  derivative.c  dialog.c  draw.c  hard_devices.c  hard_devices.h  hpgl.c  idraw.c  init.c  params.c  params.h  plotter.h  ps.c  read.c  st.c  st.h  tgif.c  xgX.c  xgout.h  xgraph.c  xgraph.h  xgraph.man  xtb.c  xtb.h
(+6721 files in other folders)
